spade-tests/src/snapshots/spade_tests__ast_lowering__expect_entity_got_pipeline_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {true}

entity test() -> bool {
    inst x()
}

error: Expected x to be an entity
  ┌─ testinput:4:10
  │
1 │ pipeline(0) x(clk: clock) -> bool {true}
  │ ---------------------------------------- x is a pipeline
  ·
4 │     inst x()
  │     ---- ^ Expected entity
  │     │     
  │     because of this inst
  │
  = Consider adding depth
  │
4 │     inst(0) x()
  │         +++


