spade-tests/src/snapshots/spade_tests__ast_lowering__expect_pipeline_got_function_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn x() -> bool {true}

entity test() -> bool {
    inst(0) x()
}

error: Expected x to be a pipeline
  ┌─ testinput:4:13
  │
1 │ fn x() -> bool {true}
  │ --------------------- x is a function
  ·
4 │     inst(0) x()
  │     ----    ^ Expected pipeline
  │     │        
  │     because of this inst
  │
  = Consider removing inst
  │
4 │     inst(0) x()
  │     ----


