spade-tests/src/snapshots/spade_tests__ast_lowering__incorrect_stage_count_single.snap
---
source: spade-tests/src/ast_lowering.rs
assertion_line: 601
---
pipeline(1) pipe(clk: clock) -> bool {
        true
}


error: Wrong number of pipeline stages
  ┌─ testinput:1:38
  │  
1 │   pipeline(1) pipe(clk: clock) -> bool {
  │            - 1 stage specified here
  │ ╭──────────────────────────────────────^
2 │ │         true
3 │ │ }
  │ ╰─^ Found no stage here


